sandbox/output
FtsTranslator.java:7: error: <identifier> expected
    public static String translate(flag, keywords){
                                       ^
FtsTranslator.java:7: error: <identifier> expected
    public static String translate(flag, keywords){
                                                 ^
2 errors
